[TDO-209] Add security audit Travis build stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ script:
 - "./vendor/bin/phpstan analyse"
 - php vendor/bin/phpunit
 - "./vendor/bin/phpcs"
+- "./vendor/bin/security-checker security:check"
 notifications:
   slack:
     rooms:
