--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 		"squizlabs/php_codesniffer": "~2.0",
 		"phpstan/phpstan": "^0.11.0",
 		"phpstan/phpstan-phpunit": "^0.11.0",
-		"guzzlehttp/guzzle": "^6.0.0"
+		"guzzlehttp/guzzle": "^6.0.0",
+		"sensiolabs/security-checker": "^6.0"
 	},
 	"autoload": {
 		"psr-4": {
