--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"php" : "^7.1",
 		"aws/aws-sdk-php": "^3.0",
 		"ramsey/uuid": "^3.0.0",
-		"serato/sws-php-sdk": "^3.0.0"
+		"serato/sws-php-sdk": "dev-tdo-test-cdn-urls",
+		"serato/sws-discovery": "dev-tdo-test-cdn-urls"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~7.0",
@@ -25,6 +26,11 @@
 	"autoload-dev": {
 		"psr-4": {
 			"Serato\\SsoRequest\\Test\\": "tests/"
+		}
+	},
+	"config": {
+		"allow-plugins": {
+			"composer/package-versions-deprecated": true
 		}
 	}
 }
