--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Run static code analyzers
         run: |
-          ./vendor/bin/phpstan analyse
+          ./vendor/bin/phpstan analyse [--paths-file phpstan.neon]
           ./vendor/bin/phpcs
           ./vendor/bin/security-checker security:check
       - name: Run test suite
