--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -1,6 +1,5 @@
-# This workflow is triggered every time a PR is opened, reopened, or the head branch of the pull request is updated.
-# Also is triggered when there is a push to master or a release branch. # It is also possible to trigger it manually.
-# ./vendor/bin/phpstan analyse is left out from Run Static Code Analyzers due to 95 errors
+# Workflow triggered on pull requests of any type and pushes to master or release branches.
+# The workflow installs dependencies, runs static code analyzers, and unit tests.
 name: Code checking and unit tests
 on:
   pull_request:
