--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Run static code analyzers
         run: |
-          ./vendor/bin/phpstan analyse [--paths-file phpstan.neon]
+          ./vendor/bin/phpstan analyse [--paths-file phpstan.neon] --memory-limit 1G
           ./vendor/bin/phpcs
           ./vendor/bin/security-checker security:check
       - name: Run test suite
