--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ubuntu-20.04]
+        operating-system: [ubuntu-latest]
         php-versions: ['7.1','7.2']
     steps:
       - uses: actions/checkout@v3
