--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: ['7.1','7.2']
+        php-versions: ['7.1']
     steps:
       - uses: actions/checkout@v3
       - name: Setup PHP
